# rep

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  add_missing_gfm_coverage_plan.md  build.sh  combine_sentence_line_modes_plan.md  implementation.md  install-skills.sh  install.sh  modular_plan.md  mouse_plan.md  source_split_plan.md
.agents/skills/rep/: SKILL.md
.agents/skills/rep/scripts/: rep.sh  run_rep_and_capture.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: demo-plan.md
plans/: code_split_plan.md  tested_linux_support_plan.md
scripts/: claude-rep-skill-demo-claude-settings.json  claude-rep-skill-demo-plan.md  claude-rep-skill-demo.tape  demo-plan.md  record-claude-rep-skill-demo.sh  record-cli-demo-social.sh  record-cli-demo.sh  record-demo.sh  release-version.sh  rep-demo-social.tape  rep-demo.tape  smoke-release-archive.sh
src/: app.rs  cli.rs  document.rs  document_view.rs  document_view_tests.rs  lib.rs  main.rs  markdown.rs  output.rs  terminal_fallback.rs  test_support.rs  ui.rs
src/app/: emit_matrix_tests.rs  input.rs  mod.rs  output.rs  render.rs  state.rs  tests.rs  transcript_tests.rs  tui_snapshot_tests.rs
src/app/input/: mod.rs  mouse.rs  navigation.rs  normal.rs  text.rs
src/app/render/: document.rs  footer.rs  mod.rs  popups.rs  state.rs  styles.rs
src/app/tests/: annotations.rs  mouse.rs  quit.rs  search.rs  selection.rs  viewport.rs
src/document_view/: code.rs  context.rs  layout.rs  links.rs  mod.rs  rendered.rs  types.rs
src/selection/: index.rs  mod.rs  model.rs  navigator.rs  navigator_integration_tests.rs  projection.rs  projection_integration_tests.rs  segment.rs  segment_integration_tests.rs
src/ui/: mod.rs  render.rs  render_cache.rs  tui.rs  wrap.rs
tests/: cli.rs  emit_matrix.rs  selection_navigation.rs  selection_projection.rs  selection_segmentation.rs  transcripts.rs  tui_snapshots.rs
tests/common/: mod.rs
tests/fixtures/app/: click-words-real-markdown.md
tests/fixtures/emit/headings-h1-h2-h3/: input.md
tests/fixtures/emit/inline-formatting/: input.md
tests/fixtures/emit/parser-footnote-ref-inline/: input.md
tests/fixtures/emit/parser-gfm-table/: input.md
tests/fixtures/emit/prose-soft-wrap/: input.md
tests/fixtures/transcripts/arrow-key-parity/: input.md  keys.txt
tests/fixtures/transcripts/blockquote/: emit.golden.actual.txt  emit.golden.txt  input.md
tests/fixtures/tui_snapshots/: ast_popup.snap  change_input.snap  feedback_input.snap  gutter_change.snap  gutter_feedback.snap  gutter_insert.snap  gutter_strike.snap  help.snap  help_shift_slash.snap  insert_after_input.snap  insert_before_input.snap  link_popup.snap  normal.snap  quit_confirmation.snap  search_input.snap  search_no_match.snap
(+269 files in other folders)
