[package]
name = "rep"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
description = "A multi-unit TUI annotation tool for Markdown files (section / paragraph / line / sentence / word), designed for human-AI review loops"
repository = "https://github.com/mattorb/rep"
license = "MIT"
keywords = ["tui", "markdown", "annotation", "review", "ai"]
categories = ["command-line-utilities", "text-editors"]
exclude = [
    ".agents/",
    ".claude/",
    ".github/",
    "AGENTS.md",
    "CLAUDE.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "combine_sentence_line_modes_plan.md",
    "implementation.md",
]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = "0.29"
ratatui = "0.30"
unicode-width = "0.2"
pulldown-cmark = "0.12"
markdown = "1"

[dev-dependencies]
insta = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
